# Marcus

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml
data/consent/: consents.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  USER_GUIDE.md
marcus_core/: __init__.py  config.py
marcus_core/compliance/: __init__.py  audit_logger.py  consent_manager.py
marcus_core/detection/: __init__.py  base.py  preprocessing.py  yolo_detector.py
marcus_core/embedding/: __init__.py  arcface.py  base.py  model_zoo.py
marcus_core/matching/: __init__.py  identity.py  matcher.py  ranker.py
marcus_core/osint/: __init__.py  base.py  dataset_adapter.py  source_registry.py  web_image_adapter.py
marcus_core/pipeline/: __init__.py  facial_pipeline.py
marcus_core/training/: __init__.py  continual_learning.py  metric_learning.py  threshold_optimizer.py
marcus_core/utils/: __init__.py  device.py  image_utils.py
marcus_core/vectordb/: __init__.py  base.py  faiss_store.py
marcus_ui/: __init__.py  app.py
marcus_ui/components/: __init__.py
marcus_ui/pages/: __init__.py  enrollment.py  home.py  live_detection.py  photo_search.py  settings.py
scripts/: test_lfw.py  train_lfw.py
tests/: __init__.py  test_config.py  test_matching.py  test_training.py
